--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mulesoft.training</groupId>
-	<artifactId>mymaven-project</artifactId>
+	<artifactId>mymaven-project-udhay</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule</packaging>
 	<name>Mule mymaven-project Application</name>
@@ -15,10 +15,35 @@
 		<mule.version>3.9.0</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
     	<activemq.version>5.15.4</activemq.version>
+    	<uid>udhaygo</uid>
+    	<pwd></pwd>
 	</properties>
 
 	<build>
 		<plugins>
+			<plugin>
+			    <groupId>org.mule.tools.maven</groupId>
+			    <artifactId>mule-maven-plugin</artifactId>
+			    <version>2.0</version>
+			    <configuration>
+			        <deploymentType>cloudhub</deploymentType>
+			        <muleVersion>${mule.version}</muleVersion>
+			        <username>${uid}</username>
+			        <password>${pwd}</password>
+				      <workerType>Micro</workerType>
+			        <redeploy>true</redeploy>
+			        <environment>Sandbox</environment>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <id>deploy</id>
+			            <phase>deploy</phase>
+			            <goals>
+			                <goal>deploy</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
